--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "axios": "^0.23.0",
     "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^7.2.5",
